Tweak width of the date banner to fix clipping

--- a/less/main.less
+++ b/less/main.less
@@ -128,7 +128,7 @@ a {
     }
 
     @media @medium {
-      width: 260px;
+      width: 300px;
     }
   }
 
